--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@tauri-apps/plugin-http": "^2",
     "@tauri-apps/plugin-opener": "^2",
     "daisyui": "^5.5.14",
+    "fast-xml-parser": "^5.3.3",
     "lucide-angular": "^0.562.0",
     "postcss": "^8.5.1",
     "rxjs": "~7.8.0",
