--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@tauri-apps/api": "^2",
     "@tauri-apps/plugin-http": "^2",
     "@tauri-apps/plugin-opener": "^2",
+    "@tauri-apps/plugin-store": "^2",
     "daisyui": "^5.5.14",
     "fast-xml-parser": "^5.3.3",
     "lucide-angular": "^0.562.0",
