--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@jsverse/transloco": "8.2.0",
     "@tailwindcss/postcss": "^4.0.0",
     "@tauri-apps/api": "^2",
+    "@tauri-apps/plugin-dialog": "~2.4.2",
     "@tauri-apps/plugin-http": "^2",
     "@tauri-apps/plugin-opener": "^2",
     "@tauri-apps/plugin-store": "^2",
