--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "daisyui": "^5.5.14",
     "fast-xml-parser": "^5.3.3",
     "lucide-angular": "^0.562.0",
+    "marked": "^17.0.1",
     "postcss": "^8.5.1",
     "rxjs": "~7.8.0",
     "tailwindcss": "^4.1.18",
