--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -31,4 +31,5 @@ walkdir = "2.5"
 anyhow = "1.0"
 dirs = "5.0"
 quick-xml = { version = "0.37", features = ["serialize"] }
+glob = "0.3"
 tauri-plugin-clipboard-manager = "2"
