feat: add Windows single-file EXE build artifact to CI/CD pipeline
- Modified .github/workflows/release.yml to include --bundles exe,nsis parameter for Windows platform
- This enables generation of both setup installer and portable EXE file
- Added feature specification, implementation plan, and task documentation
- All changes are backward compatible with existing setup files

Related to feature 011-add-windows-exe-upload

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -27,7 +27,7 @@ jobs:
                       args: ''
                     # Windows 64-bit
                     - platform: 'windows-latest'
-                      args: ''
+                      args: '--bundles exe,nsis'
 
         runs-on: ${{ matrix.platform }}
 
