--- a/.azure-pipelines/release.yml
+++ b/.azure-pipelines/release.yml
@@ -30,19 +30,19 @@ jobs:
       - checkout: self
         fetchDepth: 0
 
-      # 预创建目录防止 tar 报错
-      - script: mkdir -p $(Pipeline.Workspace)/.pnpm-store
-        displayName: 'Pre-create pnpm store'
+      # 统一使用 pwsh 处理全平台路径创建
+      - pwsh: |
+          $dirs = "$(Pipeline.Workspace)/.pnpm-store", "$(HOME)/.cargo"
+          foreach ($dir in $dirs) {
+            if (!(Test-Path $dir)) { New-Item -ItemType Directory -Force -Path $dir }
+          }
+        displayName: 'Pre-create Cache Directories'
 
       - task: Cache@2
         inputs:
           key: 'pnpm | "$(Agent.OS)" | **/pnpm-lock.yaml'
           path: $(Pipeline.Workspace)/.pnpm-store
         displayName: 'Cache pnpm'
-
-      - script: mkdir -p $(HOME)/.cargo
-        displayName: 'Pre-create Cargo dir'
-        condition: ne(variables['Agent.OS'], 'Windows_NT')
 
       - task: Cache@2
         inputs:
@@ -80,11 +80,9 @@ jobs:
         displayName: 'Install Linux Deps'
         condition: eq(variables['Agent.OS'], 'Linux')
 
-      # 正式构建 Release
       - script: pnpm tauri build $(TAURI_ARGS)
         displayName: 'Build Tauri App (Release)'
 
-      # 精确提取安装包
       - task: PublishBuildArtifacts@1
         displayName: 'Publish Release Bundles'
         inputs:
