--- a/.azure-pipelines/release.yml
+++ b/.azure-pipelines/release.yml
@@ -52,28 +52,27 @@ jobs:
           path: $(CARGO_HOME)
         displayName: 'Cache Cargo'
 
+      - task: Cache@2
+        inputs:
+          key: 'cargo-target | "$(Agent.OS)" | src-tauri/Cargo.lock'
+          restoreKeys: |
+            cargo-target | "$(Agent.OS)"
+          path: $(Build.SourcesDirectory)/src-tauri/target
+        displayName: 'Cache Cargo target/'
+
       - task: UseNode@1
         inputs: { version: '24.x' }
 
-      # Use pwsh to get consistent logs across OSes (cmd.exe sometimes produces sparse logs).
       - pwsh: |
           $ErrorActionPreference = 'Stop'
-          Write-Host "pwd: $(Get-Location)"
-          node -v
-          corepack --version
           corepack enable
           corepack prepare pnpm@10.28.1 --activate
-          pnpm --version
           pnpm config set store-dir "$(PNPM_CACHE_FOLDER)"
-          pnpm config get store-dir
-          pnpm config get optional
-          pnpm config get production
-          pnpm install --frozen-lockfile
-          if (Test-Path "node_modules/.bin") {
-            Write-Host "node_modules/.bin (first 50):"
-            Get-ChildItem "node_modules/.bin" | Select-Object -First 50 | ForEach-Object { $_.Name }
-          } else {
-            Write-Host "node_modules/.bin not found"
+          pnpm config set prefer-offline true
+          pnpm fetch --frozen-lockfile
+          pnpm install --frozen-lockfile --offline
+          if ($LASTEXITCODE -ne 0) {
+            pnpm install --frozen-lockfile
           }
           pnpm exec tauri --version
         displayName: 'Install Dependencies'
@@ -85,7 +84,6 @@ jobs:
           NODE_ENV: 'development'
 
       - script: |
-          rustup toolchain install stable --profile minimal
           rustup default stable
         displayName: 'Setup Rust'
 
